Modulo de especializaciones terminado, Idiomas y Paises agregados
